Version 1.5.5 (build @PLASTIMATCH_SVN_VERSION@)
@TIMESTAMP@

Version 1.5.4 (build 2832)
Mon Oct 10 00:20:35 EDT 2011
* Include reg-2-3 in default build
* Add plastimatch probe command
* Add landmark_diff program
* Add support for numeric implementation of B-spline regularization
* Add support for different image resolutions to Dice
* Remove automatic parsing of current directory for dicom images
* Early support for optimized histogram binning for mutual information
* Early support for reading images with irregular slice spacing
* Fix bug in converting between image types, where values were being 
  incorrectly clamped
* Fix bug in Nocedal optimizer where wrong answer is returned when 
   optimization ends during partial line search
* Fix bug where Nocedal optimizer would run out of memory during 
  initialization of large problems
* Fix bug where --fixed option was ignored when resampling vector fields
* Fix bug in image resampling between stages of multi-resolution registration
* Fix bug with mutual information during multi-resolution registration

Version 1.5.3 (build 2678)
Sun Aug 14 21:56:51 EDT 2011
* Add support for signed char image type
* Add output image type to slicer bspline plugin
* Add bspline regularization to slicer bspline plugin
* Add ss_list (structure set name) file input/output to slicer dicomrt
  import/export plugins
* Fix/workaround problem with b-spline regularization on images with 
  negative voxel spacing
* Fix bug where pixel values were wrapped instead of clamped when 
  converting to a pixel type with smaller range of values
* Fix bug where img_out_type field was ignored in registration command file
* Remove deprecated brook code

Version 1.5.2 (build 2621)
Sun Jul 24 21:06:48 EDT 2011
* Fix build problem with cuda
* Fix regression on loading mha files without direction cosines

Version 1.5.1 (build 2617)
* Reg-2-3 code for 2D-3D registration
* Slicer plugin enhancements: XFORM warper, synthetic images, DVH display